# SSRAG

./: .gitignore  CMakeLists.txt  README.md
docs/cursebreaking/: main.tex  references.bib
docs/cursebreaking/sections/: conclusion.tex  critical_scaling.tex  discussion.tex  introduction.tex  involution.tex  iot_metric.tex  practical.tex  preliminaries.tex  volume_gradient.tex
docs/design/: ssrag_cursebreaking_reference.md  ssrag_implementation.md  ssrag_lambda_fold_reference.md  ssrag_overview.md
docs/findings/: alzheimers-constrained-targets.md  faers-validation.md  polypharmacy-beyond-cardiac.md  polypharmacy-convergence-nodes.md  raw-query-alzheimers.txt  raw-query-results-extended.txt  raw-query-results.txt
docs/findings/faers_validation/: multi_drug_rates.csv  pairwise_rates.csv  single_drug_rates.csv
include/ssrag/: document_store.hpp  fingerprint.hpp  lambda_fold.hpp  mcp_server.hpp
scripts/: faers_validate.sh
src/: document_store.cpp  fingerprint.cpp  ingest_string.cpp  lambda_fold.cpp  main.cpp  mcp_server.cpp  query_string.cpp
tests/: CMakeLists.txt  document_store_test.cpp  fingerprint_test.cpp  lambda_fold_test.cpp
